--- a/travis.yml
+++ b/travis.yml
@@ -4,13 +4,17 @@ node_js:
 branches:
   only:
   - master
+  - dep-inclusions
 cache:
   directories:
   - node_modules
+
+
 install:
+  - npm install
   - npm install -g yarn
 script:
-  - yarn lint
+ #- yarn lint
   - yarn build
   - mv build/index.html build/404.html
 deploy:
